add javscript script to index template

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,5 +10,6 @@
 <body>
     {% block content %}{% endblock %}
     <p>rendered by Jinja</p>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
