--- a/templates/index.html
+++ b/templates/index.html
@@ -7,3 +7,7 @@
 {% block content %}
 <h1> Welcome to my first Flask App!</h1>
 {% endblock %}
+
+{% block scripts %}
+<script src="/static/scripts.js"></script>
+{% endblock %}
